# api-base-project

./: .ansible-lint.yml  .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bandit.yaml  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  ruff.toml
api/: .dockerignore  Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml  setup.py
api/app/: errors.py  initial_data.py  main.py  pre_start.py  worker.py
api/app/alembic/: env.py
api/app/alembic/versions/: ee54ca148397_add_users_items.py
api/app/configs/: config.yml
api/app/configs/author/: rbac_policy.csv
api/app/configs/logging/: api.json  prestart.json  worker.json
api/app/core/: app_factory.py  connections.py  docs.py  initialization.py  lock_utils.py  ratelimit.py
api/app/core/auth/: __init__.py  security.py
api/app/core/cache/: __init__.py  cache_connections.py  redis_lock.py
api/app/core/db/: __init__.py  db_connections.py
api/app/core/http/: __init__.py  api_router.py  exception_handlers.py  middleware.py
api/app/core/logging/: __init__.py  custom_logging.py
api/app/core/messaging/: __init__.py  emails.py  taskiq_broker.py
api/app/core/settings/: __init__.py  api.py  app.py  casbin.py  common_validators.py  database.py  email.py  monitoring.py  ratelimit.py  redis.py  taskiq.py  tasks.py  token.py  user.py
api/app/email-templates/src/: reset_password.mjml  test_email.mjml
api/app/schemas/: __init__.py  response.py
api/app/src/: cache_repository.py  db_base.py  db_models.py  db_repository.py  dependencies.py  route.py  service.py
api/app/src/authen/: cache_repository.py  dependencies.py  errors.py  schemas.py  services.py
api/app/src/author/: cache_repository.py  casbin_adapter.py  casbin_enforcer.py  db_models.py  db_repository.py  errors.py  init_casbin.py  schemas.py
api/app/src/items/: db_models.py  db_repository.py  errors.py  schemas.py  services.py
api/app/tasks/: __init__.py  test.py
api/app/utils/: __init__.py  encoder.py  file.py  sql_utils.py
api/scripts/: prestart.sh
(+62 files in other folders)
